# hello_wasmer_by_rust

./: Cargo.toml  Readme.md
src/: main.rs
