[package]
authors = ["Umu999 <8ejrwawiq3xy@gmail.com>"]
edition = "2018"
name = "hello_wasmer_by_rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The Wasmer API
wasmer = "1.0"

[patch.crates-io.enumset_derive]
branch = "span-fix"
git = "https://github.com/ocboogie/enumset"
